Fixed Merge Multiple 'putAfter' Bug Causing Wrong Layers To Merge

Fixed bug where invalid putAfter was causing incorrect nodes to merge when
lowest most 'active' node was invisible.

BUG: 395903